    output argument is requested, instead the vector or array of
    interpolated values is always returned for Matlab compatibility.

 ** The new function "light" and corresponding graphics object provide
    light and shadow effects for patch and surface objects.

 ** The surfnorm function now returns unnormalized (magnitude != 1)
    normal vectors for compatibility with Matlab.

 ** The quadl function now uses an absolute, rather than relative,
    tolerance for Matlab compatibility.  The default tolerance is 1e-6
    which may result in lower precision results than previous versions
    of Octave which used eps as the relative tolerance.  The quadl
    function has also been extended to return a second output with the
    total number of function evaluations.

 ** The textscan function is now built-in and is much faster and much
    more Matlab-compatible than the previous m-file version.

 ** Dialog boxes--errordlg, helpdlg, inputdlg, listdlg, msgbox,
    questdlg, and warndlg--now exclusively use Qt for rendering.
    Java based versions have been removed.

 ** The graphics property 'erasemode' has been hidden, and will
    eventually be removed.  This property has also been removed
    from Matlab, and was never implemented in Octave.

 ** The graphics property 'graphicssmothing' for figures now controls whether
    anti-aliasing will be use for lines.  The default is "on".

 ** The publish function allows easy publication of Octave script files
    in HTML or other formats, including figures and output created by this
    script.  It comes with its counterpart grabcode, which lets one literally
    grab the HTML published code from a remote website, for example.

 ** Other new functions added in 4.2:

      audioformats
      deg2rad
      dialog
      evalc
      hash
      im2double
      localfunctions
      ode45
      odeget
      odeset
      padecoef
      psi
      rad2deg
      uibuttongroup

 ** Deprecated functions.
